# flutter-wallet

./: README.md  generate.sh  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  main.dart  rust_api.dart
lib/components/: already_have_an_account_acheck.dart
lib/controllers/: controllers.dart  home_controller.dart  identity_screen.dart
lib/messages/: messages.dart
lib/model/: data.dart  identity.dart
lib/models/: credential.dart  data.dart  identity.dart  meta_credential.dart  models.dart  verifiable_credential.dart
lib/pages/: product_detail.dart  shopping_cart_page.dart
lib/screens/: screens.dart
lib/screens/home/: home_screen.dart
lib/services/: _base_service.dart  identity_service.dart  ipfs_service.dart  login_service.dart  services.dart
lib/themes/: light_color.dart  theme.dart
lib/widgets/: identity_add_icon.dart  identity_icon.dart  product_card.dart  product_icon.dart  title_text.dart  vc_card.dart
rust/: Cargo.toml
rust/flutter_link_idns_identity.xcodeproj/: project.pbxproj
rust/flutter_link_idns_identity.xcodeproj/xcuserdata/suhs.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: api.rs  bridge_generated.rs  lib.rs
rust/src/account/: account.rs  auth.rs
rust/src/identity/: application_service.rs  attribute_service.rs  attribute_value_service.rs  identity_service.rs  meta_credential_service.rs  verifiable_credential_service.rs
rust/src/utils/: mod.rs
test/: widget_test.dart
(+25 files in other folders)
